src/objects/Lunch_Participant__c.object
<CustomObject>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Lunch Participants</relationshipLabel>
        <relationshipName>Lunch_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lunch_Meetup__c</fullName>
        <label>Lunch Meetup</label>
        <referenceTo>Lunch_Meetup__c</referenceTo>
        <relationshipLabel>Lunch Participants</relationshipLabel>
        <relationshipName>Lunch_Participants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Employee__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <label>Lunch Participant</label>
    <nameField>
        <displayFormat>LP-{0000000}</displayFormat>
        <label>Lunch Participant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lunch Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>